--- a/.github/workflows/add-to-project-management.yml.yml
+++ b/.github/workflows/add-to-project-management.yml.yml
@@ -3,6 +3,8 @@ name: Add to ProjectManagement board when issue created
 on:
   issues:
     types: [opened]
+env:
+  MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
 
 jobs:
   add-to-project-management:
@@ -12,4 +14,3 @@ jobs:
       uses: srggrs/assign-one-project-github-action@1.2.0
       with:
         project: 1
-        github_token: ${{ secrets.GITHUB_TOKEN }}
